feat: implement auth module (without refresh: login method, guard, decorator), adjust users service
