# src/users/users.controller.ts
@@ -8,16 +8,19 @@ import {
   Param,
   Post,
   Put,
+  UseGuards,
 } from '@nestjs/common';
 import { UsersService } from './users.service';
+import {User as PrismaUser} from '@prisma/client'
 import { User } from 'src/utils/interfaces';
-import { CreateUserDto } from 'src/utils/interfaces.dto';
+// import { CreateUserDto } from 'src/utils/interfaces.dto';
 import { UpdatePasswordDto } from './dto/update-password.dto';
 import { CreateUserDTO } from './dto/create-user.dto';
+// import { AuthGuard } from 'src/auth/guards/auth.guard';
+import { Public } from 'src/auth/decorators/decorator';
 
 @Controller('user')
 export class UsersController {
-  // no additional fields!!!
 
   constructor(private readonly usersService: UsersService) {}
 
@@ -36,7 +39,7 @@ export class UsersController {
   @Post()
   @Header('Content-Type', 'application/json')
   @HttpCode(201)
-  async addUser(@Body() user: CreateUserDTO): Promise<Partial<User>> {
+  async addUser(@Body() user: PrismaUser) {
     return await this.usersService.addUser(user);
   }
 
